--- a/priv/nginx/error_pages/maintenance.html
+++ b/priv/nginx/error_pages/maintenance.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <title>Hypernumbers</title>
-    
+
     <style type="text/css">
       body { font : 13px sans-serif; width:300px; margin:0px auto; padding-top:30px; }
 
     </style>
-    
+
 </head>
 
 <body>
 
-  <img src="/img/logo_white.png" />
+  <img src="/logo_white.png" />
   <p>Hypernumbers is down for maintenance.</p>
   <p>We will be back shortly, and keep you updated at <a href="http://twitter.com/hypernumbers">twitter</a>.</p>
 
