--- a/priv/nginx/error_pages/maintenance.html
+++ b/priv/nginx/error_pages/maintenance.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Hypernumbers</title>
+    <title>Vixo</title>
 
     <style type="text/css">
       body { font : 13px sans-serif; width:300px; margin:0px auto; padding-top:30px; }
@@ -13,9 +13,9 @@
 
 <body>
 
-  <img src="/logo_white.png" />
-  <p>Hypernumbers is down for maintenance.</p>
-  <p>We will be back shortly, and keep you updated at <a href="http://twitter.com/hypernumbers">twitter</a>.</p>
+  <!--<img src="http://files.vixo.com/vixo/img/borked-vixo.png" />-->
+  <p>Vixo is down for maintenance.</p>
+  <p>We will be back shortly, and keep you updated at <a href="http://twitter.com/gordonguthrie">twitter</a>.</p>
 
 </body>
 </html>
