--- a/priv/nginx/error_pages/maintenance.html
+++ b/priv/nginx/error_pages/maintenance.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <!--<img src="http://files.vixo.com/vixo/img/borked-vixo.png" />-->
+  <img src="http://files.vixo.com/vixo/img/vixo_maintenance.png" />
   <p>Vixo is down for maintenance.</p>
   <p>We will be back shortly, and keep you updated at <a href="http://twitter.com/gordonguthrie">twitter</a>.</p>
 
